@@ -11,6 +11,7 @@ Version 0.5.1
 * Apply patch #1328641 Fix build on GNU/kFreeBSD
 * Apply patch #1329831 Updated pt_BR translation
 * Use valgrind to fix minor memory leaks.
+* Remember the last selected data and audio disk sizes.
 
 Version 0.5.0
 
